@@ -69,6 +69,8 @@ class PanAPIConnector
     public $info_serial = null;
     /** @var null|string $info_hostname device hostname. ie: "PA-200" */
     public $info_hostname = null;
+    /** @var null|string $info_mgmtip product mgmt interface IP. ie: "192.168.0.1" */
+    public $info_mgmtip = null;
     /** @var string $info_model can be unknown|m100|m500|pa200|pa500|pa2020|PA2050|PA3020|PA3050|PA3060|PA4020|PA4060|PA..... */
     public $info_model = 'unknown';
     /** @var string $info_vmlicense can be unknown|VM-100|VM-200|VM-300|VM-1000 */
@@ -123,6 +125,11 @@ class PanAPIConnector
         if( $hostname === FALSE )
             derr("cannot find <hostname>:\n" . DH::dom_to_xml($orig, 0, TRUE, 4));
         $this->info_hostname = $hostname->textContent;
+
+        $mgmtip = DH::findFirstElement('ip-address', $res);
+        if( $mgmtip === FALSE )
+            derr("cannot find <serial>:\n" . DH::dom_to_xml($orig, 0, TRUE, 4));
+        $this->info_mgmtip = $mgmtip->textContent;
 
         $model = DH::findFirstElement('model', $res);
         if( $model === FALSE )
